--- a/module2-assignment/index.html
+++ b/module2-assignment/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Module-2 assignment solution</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width = device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>Hi, Rizwan!</h1>
+<section>
+	<h1>Our Menu</h1>
+	<div class="row">
+		<div id="box-1" class="col-lg-4 col-md-6">
+			<div>	
+			<h2>Chicken</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In luctus leo nec nisl egestas, vel scelerisque sem semper. Vestibulum eu pharetra leo. Nulla at ex eu nisi dignissim fermentum a vel lacus. In hac habitasse platea dictumst. Aliquam vitae tristique magna, in dictum nulla. Vestibulum sit amet augue magna.</p>
+			</div>
+		</div>
+		<div id="box-2" class="col-lg-4 col-md-6">
+			<div>	
+			<h2>Beef</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In luctus leo nec nisl egestas, vel scelerisque sem semper. Vestibulum eu pharetra leo. Nulla at ex eu nisi dignissim fermentum a vel lacus. In hac habitasse platea dictumst. Aliquam vitae tristique magna, in dictum nulla. Vestibulum sit amet augue magna.</p>
+			</div>
+		</div>
+		<div id="box-3" class="col-lg-4 col-md-12">
+			<div>
+			<h2>Sushi</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In luctus leo nec nisl egestas, vel scelerisque sem semper. Vestibulum eu pharetra leo. Nulla at ex eu nisi dignissim fermentum a vel lacus. In hac habitasse platea dictumst. Aliquam vitae tristique magna, in dictum nulla. Vestibulum sit amet augue magna.</p>
+			</div>
+		</div>
+	</div>
+</section>
 </body>
 </html>
