--- a/module2-assingnment/index.html
+++ b/module2-assingnment/index.html
@@ -5,11 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Word</title>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Mod 2 Solution</title>
 </head>
 
 <body>
-
+    <h1>Our Menu</h1>
+    <section class="row">
+        <div class="col-lg-4 col-md-6">
+            <div class="menu-item">
+                <h2 class="menu-item--title bg-pink">Chicken</h2>
+                <p class="menu-item--description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, odio!
+                    Ullam odio sequi ipsam
+                    perspiciatis repellat molestiae, animi obcaecati veniam pariatur cupiditate ipsa? Tenetur ipsum
+                    provident, adipisci doloribus consequatur quas.</p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+            <div class="menu-item">
+                <h2 class="menu-item--title bg-maroon white">Beef</h2>
+                <p class="menu-item--description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, odio!
+                    Ullam odio sequi ipsam
+                    perspiciatis repellat molestiae, animi obcaecati veniam pariatur cupiditate ipsa? Tenetur ipsum
+                    provident, adipisci doloribus consequatur quas.</p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <div class="menu-item">
+                <h2 class="menu-item--title bg-sandybrown">Sushi</h2>
+                <p class="menu-item--description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, odio!
+                    Ullam odio sequi ipsam
+                    perspiciatis repellat molestiae, animi obcaecati veniam pariatur cupiditate ipsa? Tenetur ipsum
+                    provident, adipisci doloribus consequatur quas.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
