--- a/module3-assignment/index.html
+++ b/module3-assignment/index.html
@@ -5,42 +5,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Mod 2 Solution</title>
 </head>
 
 <body>
-    <h1>Our Menu</h1>
-    <section class="row">
-        <div class="col-lg-4 col-md-6">
-            <div class="menu-item">
-                <h2 class="menu-item--title bg-pink">Chicken</h2>
-                <p class="menu-item--description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, odio!
-                    Ullam odio sequi ipsam
-                    perspiciatis repellat molestiae, animi obcaecati veniam pariatur cupiditate ipsa? Tenetur ipsum
-                    provident, adipisci doloribus consequatur quas.</p>
+    <!-- Navbar -->
+    <header>
+        <nav id="header-nav" class="navbar navbar-default bg-secondary">
+            <div class="container-fluid food-nav">
+                <a class="navbar-brand ms-3 my-3" href="#" id="navbar-brand">Food, LLC</a>
+                <button class="navbar-toggler my-3 me-3 d-block d-sm-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    <!-- <span class="sr-only">Toggle navigation</span> -->
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div class="collapse navbar-collapse bg-light" id="menu">
+                    <ul class="nav navbar-nav text-center">
+                        <li class="nav-item border-bottom">
+                            <a class="nav-link" href="#chicken">Chicken</a>
+                        </li>
+                        <li class="nav-item border-bottom">
+                            <a class="nav-link" href="#beef">Beef</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#sushi">Sushi</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-            <div class="menu-item">
-                <h2 class="menu-item--title bg-maroon white">Beef</h2>
-                <p class="menu-item--description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, odio!
-                    Ullam odio sequi ipsam
-                    perspiciatis repellat molestiae, animi obcaecati veniam pariatur cupiditate ipsa? Tenetur ipsum
-                    provident, adipisci doloribus consequatur quas.</p>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <section class="container-fluid">
+        <h1 class="text-center my-3">Our Menu</h1>
+        <div class="row g-3">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="border border-dark bg-secondary px-3 py-2" id="Chicken">
+                    <h2 class="text-center">Chicken
+                    </h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum,
+                        odio!
+                        Ullam odio sequi ipsam
+                        perspiciatis repellat molestiae, animi obcaecati veniam pariatur cupiditate ipsa? Tenetur ipsum
+                        provident, adipisci doloribus consequatur quas.</p>
+                </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-12">
-            <div class="menu-item">
-                <h2 class="menu-item--title bg-sandybrown">Sushi</h2>
-                <p class="menu-item--description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, odio!
-                    Ullam odio sequi ipsam
-                    perspiciatis repellat molestiae, animi obcaecati veniam pariatur cupiditate ipsa? Tenetur ipsum
-                    provident, adipisci doloribus consequatur quas.</p>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="border border-dark bg-secondary px-3 py-2" id="beef">
+                    <h2 class="text-center">Beef</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum,
+                        odio!
+                        Ullam odio sequi ipsam
+                        perspiciatis repellat molestiae, animi obcaecati veniam pariatur cupiditate ipsa? Tenetur ipsum
+                        provident, adipisci doloribus consequatur quas. <a href="#navbar-brand"
+                            class="d-block d-sm-none">Back to top</a></p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12 col-xs-12">
+                <div class="border border-dark bg-secondary px-3 py-2" id="sushi">
+                    <h2 class="text-center">Sushi</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum,
+                        odio!
+                        Ullam odio sequi ipsam
+                        perspiciatis repellat molestiae, animi obcaecati veniam pariatur cupiditate ipsa? Tenetur ipsum
+                        provident, adipisci doloribus consequatur quas.</p>
+                </div>
             </div>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
