--- a/module4-assignment-sol/easier/index.html
+++ b/module4-assignment-sol/easier/index.html
@@ -5,14 +5,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Module 4 Solution Starter</title>
+  <title>Module 4 Solution</title>
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
 </head>
 
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution</h1>
 </body>
 
 </html>
